Dialog z-index fix

--- a/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
+++ b/Controls/CookieBar/src/DotVVM.Contrib/Styles/DotVVM.Contrib.CookieBar.scss
@@ -265,7 +265,7 @@
         max-width: var(--pop-up-max-width);
         width: 100%;
         background: var(--color-background);
-        z-index: 9999;
+        z-index: 999;
         box-shadow: var(--dialog_box-shadow);
         gap: 1em;
         box-sizing: border-box;
